--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: rust
 
-sudo: false
+#sudo: false
+#
+#addons:
+#  apt:
+#    packages:
+#      # rsmpi dependencies
+#      - mpich2
+#      - libclang-3.4-dev
+#      # travis-cargo dependencies
+#      - libcurl4-openssl-dev
+#      - libelf-dev
+#      - libdw-dev
 
-addons:
-  apt:
-    packages:
-      # rsmpi dependencies
-      - openmpi-bin
-      - libopenmpi-dev
-      - libclang-3.4-dev
-      # travis-cargo dependencies
-      - libcurl4-openssl-dev
-      - libelf-dev
-      - libdw-dev
-
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y mpich2 libclang-3.4-dev libcurl4-openssl-dev libelf-dev libdw-dev
 
 rust:
   - beta
