--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,10 @@ rust:
   # - beta
 
 env:
-  - MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.1.4
-  # - MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.0.4
-  # - MPI_LIBRARY=openmpi MPI_LIBRARY_VERSION=1.8.7
+  matrix:
+    - MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.1.4
+    # - MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.0.4
+    # - MPI_LIBRARY=openmpi MPI_LIBRARY_VERSION=1.8.7
   global:
     - LIBCLANG_PATH=/usr/lib/llvm-3.4/lib
 
