--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
     packages:
       # for building MPI libraries
       - build-essential
+      - gfortran
       # bindgen dependency
       - libclang-3.4-dev
       # travis-cargo dependencies
