--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ env:
 
 install:
   - sh ci/install-mpi.sh
-  - export PATH="${HOME}/opt/${MPI_LIBRARY}-${MPI_LIBRARY_VERSION}/bin:${PATH}"
+  - export MPI_PREFIX="${HOME}/opt/${MPI_LIBRARY}-${MPI_LIBRARY_VERSION}"
+  - export PATH="${MPI_PREFIX}/bin${PATH:+":${PATH}"}"
+  - export LD_LIBRARY_PATH="${MPI_PREFIX}/lib${LD_LIBRARY_PATH:+":${LD_LIBRARY_PATH}"}"
   - |
       pip install 'travis-cargo<0.2' --user &&
       export PATH="${HOME}/.local/bin:${PATH}"
