--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,9 @@ install:
 script:
   - travis-cargo build && travis-cargo test
 
+before-deploy:
+  - sh ci/save-credentials.sh
+
 deploy:
   provider: script
   script: ci/deploy-docs.sh
