--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,9 @@ script:
   - travis-cargo build && travis-cargo test
 
 before_deploy:
-  - sh ci/save-credentials.sh
+  - openssl aes-256-cbc -K $encrypted_bf29288dac26_key -iv $encrypted_bf29288dac26_iv -in ci/deploy_key.enc -out ci/deploy_key -d
+  - echo -e "Host github.com\n  IdentityFile $(pwd)/ci/deploy_key" >> ${HOME}/.ssh/config
+  #  - sh ci/save-credentials.sh
 
 deploy:
   provider: script
