--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ script:
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_bf29288dac26_key -iv $encrypted_bf29288dac26_iv -in ci/deploy_key.enc -out ci/deploy_key -d
   - echo -e "Host github.com\n  IdentityFile $(pwd)/ci/deploy_key" >> ${HOME}/.ssh/config
+  - git remote set-url origin git@github.com:bsteinb/rsmpi.git
   #  - sh ci/save-credentials.sh
 
 deploy:
