--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,10 @@ script:
   - travis-cargo build && travis-cargo test
 
 before_deploy:
+  - touch ci/deploy_key && chmod 0600 ci/deploy_key
   - openssl aes-256-cbc -K $encrypted_bf29288dac26_key -iv $encrypted_bf29288dac26_iv -in ci/deploy_key.enc -out ci/deploy_key -d
   - echo -e "Host github.com\n  IdentityFile $(pwd)/ci/deploy_key" >> ${HOME}/.ssh/config
   - git remote set-url origin git@github.com:bsteinb/rsmpi.git
-  #  - sh ci/save-credentials.sh
 
 deploy:
   provider: script
