--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ addons:
 
 rust:
   - stable
-  #- beta
+  - beta
 
 env:
   matrix:
     - MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.1.4
-    #- MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.0.4
-    #- MPI_LIBRARY=openmpi MPI_LIBRARY_VERSION=1.8.7
+    - MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.0.4
+    - MPI_LIBRARY=openmpi MPI_LIBRARY_VERSION=1.8.7
   global:
     - DOC_LIBRARY=mpich
     - DOC_LIBRARY_VERSION=3.1.4
