--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,7 @@ libc = "0.1.10"
 
 [build-dependencies]
 gcc = "0.3.13"
-
-[build-dependencies.bindgen]
-git = "https://github.com/crabtw/rust-bindgen.git"
+bindgen = "0.15.0"
 
 #[dependencies.c_import]
 #git = "https://github.com/vojtechkral/rust-c-import.git"
