Relicense to dual MIT/Apache-2.0
Closes https://github.com/bsteinb/rsmpi/issues/4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 
 keywords = [ "message-passing", "parallel" ]
 
-license = "MIT"
+license = "MIT OR Apache-2.0"
 
 build = "build.rs"
 
