--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ build = "build.rs"
 [dependencies]
 libc = "0.2"
 conv = "0.3"
+clippy = {version = "0.0.37", optional = true}
 
 [build-dependencies]
 gcc = "0.3"
@@ -26,3 +27,6 @@ bindgen = "0.15"
 
 #[dependencies.c_import]
 #git = "https://github.com/vojtechkral/rust-c-import.git"
+
+[features]
+default=[]
