--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,15 @@ install:
   - export MPI_PREFIX="${HOME}/opt/${MPI_LIBRARY}-${MPI_LIBRARY_VERSION}"
   - export PATH="${HOME}/.local/bin:${MPI_PREFIX}/bin${PATH:+":${PATH}"}"
   - export LD_LIBRARY_PATH="${MPI_PREFIX}/lib${LD_LIBRARY_PATH:+":${LD_LIBRARY_PATH}"}"
+  - if [ "$TRAVIS_RUST_VERSION" = "nightly" ]; then
+      cargo install clippy;
+    fi
 
 script:
   - cargo build -v && cargo test -v && sh ci/run-examples.sh
+  - if [ "$TRAVIS_RUST_VERSION" = "nightly" ]; then
+      cargo clippy -v --features "clippy";
+    fi
 
 before_deploy:
   # Set up credentials for deploying
