chore: switch to servo bindgen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ conv = "0.3"
 
 [build-dependencies]
 gcc = "0.3"
-bindgen = { git = "https://github.com/crabtw/rust-bindgen.git", rev = "0433980286a5264e3d69214aa42e314c37238cf6" }
+bindgen = "0.22"
 build-probe-mpi = { path = "./build-probe-mpi" }
 rustc_version = "0.1"
 
