use cache for cargo dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -98,5 +98,6 @@ deploy:
       condition: "${MPI_LIBRARY} = ${RELEASE_LIBRARY} && ${MPI_LIBRARY_VERSION} = ${RELEASE_LIBRARY_VERSION} && ${TRAVIS_RUST_VERSION} = stable"
 
 cache:
+  cargo: true
   directories:
     - $HOME/opt
