--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
   - export PATH="${HOME}/.local/bin:${MPI_PREFIX}/bin${PATH:+":${PATH}"}"
   - export LD_LIBRARY_PATH="${MPI_PREFIX}/lib${LD_LIBRARY_PATH:+":${LD_LIBRARY_PATH}"}"
   - if [ "$TRAVIS_RUST_VERSION" = "nightly" ]; then
-      cargo install clippy;
+      cargo install --force clippy;
     fi
 
 script:
