Add a custom derive for MPI Datatypes.
Currently only supports simple structures of separate, scalar fields

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ categories = [ "concurrency" ]
 license = "MIT/Apache-2.0"
 
 [workspace]
+members = ["mpi-derive"]
 
 [features]
 default = ["user-operations"]
