--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ user-operations = ["libffi"]
 
 [dependencies]
 conv = "0.3"
-libffi = { version = "0.6.3", optional = true }
+libffi = { version = "=0.6.4", optional = true }
 mpi-sys = { path = "mpi-sys", version = "0.1" }
 smallvec = "0.6.5"
 
