--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ install:
   # Global set-up
   - cargo install --force cargo-mpirun
   - if [ "$TRAVIS_RUST_VERSION" = "nightly" ]; then
-      cargo install --force clippy;
+      rustup component add clippy;
     fi
 
 script:
