--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mpi"
-version = "0.5.4"
+version = "0.6.0"
 authors = [
     "Benedikt Steinbusch <ben@rockshrub.de>",
     "Andrew Gaspar <andrew.gaspar@outlook.com>"
@@ -23,8 +23,8 @@ user-operations = ["libffi"]
 
 [dependencies]
 conv = "0.3"
-libffi = { version = "=0.6.4", optional = true }
-mpi-sys = { path = "mpi-sys", version = "0.1" }
+libffi = { version = "0.7.0", optional = true }
+mpi-sys = { path = "mpi-sys", version = "0.2" }
 smallvec = "0.6.5"
 
 [build-dependencies]
