--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,8 @@ libffi = { version = "0.8.0", optional = true }
 mpi-sys = { path = "mpi-sys", version = "0.2" }
 smallvec = "0.6.5"
 
+[dev-dependencies]
+memoffset = "0.5"
+
 [build-dependencies]
 rustc_version = "0.2"
