--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 keywords = [ "message-passing", "parallel" ]
 categories = [ "concurrency" ]
 license = "MIT/Apache-2.0"
+edition = "2018"
 
 [workspace]
 
