--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ license = "MIT/Apache-2.0"
 [workspace]
 
 [features]
-default = ["user-operations"]
+default = []
 
 user-operations = ["libffi"]
 
