Add traits for identifying types that are safe to treat as bytes and safe to construct from bytes.
Buffer is now only implemented for types that implement ToBytes.
BufferMut is now only implemented for types that implement FromAnyBytes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,11 @@ smallvec = "1.0.0"
 [build-dependencies]
 build-probe-mpi = { path = "build-probe-mpi", version = "0.1" }
 
-# The following tests depend on specific features
+[dev-dependencies]
+memoffset = "0.5"
+safe-transmute = "0.11.0-rc.2"
 
+# The following tests depend on specific features
 [[example]]
 name = "struct"
 required-features = ["derive"]
