Remove install script for "cargo fmt"

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,12 @@ env:
 
 matrix:
   include:
-    - script:
+    # Special format job
+    - install: [] # Don't need this for formatting the code
+      script:
       - cargo fmt --all
         git diff --exit-code
+    # Build matrix of MPI builds
     - env: LIBCLANG_PATH=/usr/lib/llvm-3.9/lib MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.3 RELEASE_CONFIG=true
       rust: stable
       os: linux
