Re-order build jobs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,13 +31,18 @@ matrix:
       - cargo fmt --all
         git diff --exit-code
     # Build matrix of MPI builds
+    # We put the latest versions of MPICH, OpenMPI, and MS-MPI first. Everything
+    # else comes later.
     - env: LIBCLANG_PATH=/usr/lib/llvm-3.9/lib MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.3 RELEASE_CONFIG=true
       rust: stable
       os: linux
-    - env: LIBCLANG_PATH=/usr/lib/llvm-3.9/lib MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.2.1 RELEASE_CONFIG=false
+    - env: LIBCLANG_PATH=/usr/lib/llvm-3.9/lib MPI_LIBRARY=openmpi MPI_LIBRARY_VERSION=4.0.1 RELEASE_CONFIG=false
       rust: stable
       os: linux
-    - env: LIBCLANG_PATH=/usr/lib/llvm-3.9/lib MPI_LIBRARY=openmpi MPI_LIBRARY_VERSION=4.0.1 RELEASE_CONFIG=false
+    - env: MPI_LIBRARY=msmpi MPI_LIBRARY_VERSION=10.0.0 RELEASE_CONFIG=false
+      rust: stable
+      os: windows
+    - env: LIBCLANG_PATH=/usr/lib/llvm-3.9/lib MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.2.1 RELEASE_CONFIG=false
       rust: stable
       os: linux
     - env: LIBCLANG_PATH=/usr/lib/llvm-3.9/lib MPI_LIBRARY=openmpi MPI_LIBRARY_VERSION=3.1.4 RELEASE_CONFIG=false
@@ -52,9 +57,6 @@ matrix:
     - env: LIBCLANG_PATH=/usr/lib/llvm-3.9/lib MPI_LIBRARY=mpich MPI_LIBRARY_VERSION=3.3 RELEASE_CONFIG=false
       rust: nightly
       os: linux
-    - env: MPI_LIBRARY=msmpi MPI_LIBRARY_VERSION=10.0.0 RELEASE_CONFIG=false
-      rust: stable
-      os: windows
     - env: MPI_LIBRARY=msmpi MPI_LIBRARY_VERSION=10.0.0 RELEASE_CONFIG=false
       rust: nightly
       os: windows
