Add rustfmt component explicitly

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ matrix:
     # Special format job
     - install: [] # Don't need this for formatting the code
       script:
-      - cargo fmt --all
+      - rustup component add rustfmt
+        cargo fmt --all
         git diff --exit-code
     # Build matrix of MPI builds
     # We put the latest versions of MPICH, OpenMPI, and MS-MPI first. Everything
