--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,18 +24,39 @@ default = []
 user-operations = ["libffi"]
 derive = ["mpi-derive"]
 
-[[example]]
-name = "struct"
-required-features = ["derive"]
-
 [dependencies]
 conv = "0.3"
 libffi = { version = "0.8.0", optional = true }
 mpi-derive = { path = "mpi-derive", optional = true }
 mpi-sys = { path = "mpi-sys", version = "0.2" }
-smallvec = "1.0.0"
+# Public dependency when "derive" feature is enabled
+once_cell = "1.4"
 # TODO: This needs to be a real version before this is merged
+# Public dependency when "derive" feature is enabled
 memoffset = { git = "https://github.com/AndrewGaspar/memoffset.git", branch = "tuple-offset" }
+smallvec = "1.0.0"
 
 [build-dependencies]
 rustc_version = "0.2"
+
+# The following tests depend on specific features
+
+[[example]]
+name = "struct"
+required-features = ["derive"]
+
+[[example]]
+name = "derive_multiple_thread_init"
+required-features = ["derive"]
+
+[[example]]
+name = "derive_nonthreaded_panic"
+required-features = ["derive"]
+
+[[example]]
+name = "derive_postfinalize_panic"
+required-features = ["derive"]
+
+[[example]]
+name = "derive_preinit_panic"
+required-features = ["derive"]
