--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,10 @@ conv = "0.3"
 libffi = { version = "0.8.0", optional = true }
 mpi-derive = { path = "mpi-derive", optional = true }
 mpi-sys = { path = "mpi-sys", version = "0.2" }
-# Public dependency when "derive" feature is enabled
+# Public dependency ("derive" feature)
+memoffset = "0.6"
+# Public dependency ("derive" feature)
 once_cell = "1.4"
-# TODO: This needs to be a real version before this is merged
-# Public dependency when "derive" feature is enabled
-memoffset = { git = "https://github.com/AndrewGaspar/memoffset.git", branch = "tuple-offset" }
 smallvec = "1.0.0"
 
 [build-dependencies]
