--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ mpi-sys = { path = "mpi-sys", version = "0.2" }
 once_cell = "1.4"
 smallvec = "1.0.0"
 
+[build-dependencies]
+build-probe-mpi = { path = "build-probe-mpi", version = "0.1" }
+
 # The following tests depend on specific features
 
 [[example]]
