--- a/mpi-derive/Cargo.toml
+++ b/mpi-derive/Cargo.toml
@@ -10,4 +10,8 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
-syn = "1"
+
+[dependencies.syn]
+version = "1"
+# Needed for PartialEq on Type
+features = ["extra-traits"]
