--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ smallvec = "1.0.0"
 
 [build-dependencies]
 build-probe-mpi = { path = "build-probe-mpi", version = "0.1" }
+rustc_version = "0.2"
 
 [dev-dependencies]
 safe-transmute = "0.11.0-rc.2"
