--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ mpi-sys = { path = "mpi-sys", version = "0.2" }
 # Public dependency ("derive" feature)
 once_cell = "1.4"
 smallvec = "1.0.0"
+num-complex = "0.4"
 
 [build-dependencies]
 build-probe-mpi = { path = "build-probe-mpi", version = "0.1" }
