--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,17 +24,26 @@ jobs:
           - nightly
         mpi_package:
           - libmpich-dev
+        cargo_flags:
+          - --all-features
         include:
           - os: ubuntu-latest
             rust: 1.36.0 # First version with MaybeUninit
             mpi_package: libmpich-dev
+            cargo_flags: --all-features
           - os: macos-latest
             rust: stable
             mpi_package: open-mpi
+            cargo_flags: --all-features
           - os: ubuntu-latest
             rust: stable
             mpi_package: libopenmpi-dev
+            cargo_flags: --all-features
+          - os: windows-2022
+            rust: stable
+            cargo_flags: --features derive
     steps:
+      - uses: actions/checkout@v2
       - name: Install (Ubuntu)
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
@@ -49,15 +58,23 @@ jobs:
         if: ${{ matrix.os == 'windows-2022' }}
         run: |
           choco install llvm --version 13.0.0 -y
+          sh ci/install-mpi-windows.sh
+          echo 'MSMPI_INC="C:\\Program Files (x86)\\Microsoft SDKs\\MPI\\Include\\"' >> $GITHUB_ENV
+          echo 'MSMPI_LIB32="C:\\Program Files (x86)\\Microsoft SDKs\\MPI\\Lib\\x86\\"' >> $GITHUB_ENV
+          echo 'MSMPI_LIB64="C:\\Program Files (x86)\\Microsoft SDKs\\MPI\\Lib\\x64\\"' >> $GITHUB_ENV
+          echo 'PATH="${HOME}/.cargo/bin:C:\\Program Files\\Microsoft MPI\\Bin${PATH:+":${PATH}"}"' >> $GITHUB_ENV
           env
       - name: Clang Version
         run: clang --version
-      - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{matrix.rust}}
-      - name: Cargo Test all-features
+      - name: Cargo Test ${{ matrix.cargo_flags }}
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all-features
+          args: ${{ matrix.cargo_flags }}
+      - name: Parallel Examples
+        run: |
+          cargo install --force cargo-mpirun
+          ci/run-examples.sh ${{ matrix.cargo_flags }}
