--- a/build-probe-mpi/Cargo.toml
+++ b/build-probe-mpi/Cargo.toml
@@ -6,8 +6,8 @@ authors = [
     "Andrew Gaspar <andrew.gaspar@outlook.com>"
 ]
 description = "Probes the system for an installation of an MPI library"
-homepage = "https://github.com/bsteinb/rsmpi"
-repository = "https://github.com/bsteinb/rsmpi"
+homepage = "https://github.com/rsmpi/rsmpi"
+repository = "https://github.com/rsmpi/rsmpi"
 categories = [ "development-tools::build-utils" ]
 license = "MIT/Apache-2.0"
 
