--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ keywords = [ "message-passing", "parallel" ]
 categories = [ "concurrency" ]
 license = "MIT/Apache-2.0"
 edition = "2018"
+rust-version = "1.54"
 
 [workspace]
 members = ["mpi-derive"]
@@ -26,7 +27,7 @@ derive = ["mpi-derive"]
 
 [dependencies]
 conv = "0.3"
-libffi = { version = "2.0.1", optional = true }
+libffi = { version = "3.0.0", optional = true }
 # Public dependency ("derive" feature)
 memoffset = "0.6"
 mpi-derive = { path = "mpi-derive", optional = true }
