--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ conv = "0.3"
 libffi = { version = "3.0.0", optional = true }
 # Public dependency ("derive" feature)
 memoffset = "0.6"
-mpi-derive = { path = "mpi-derive", optional = true }
+mpi-derive = { path = "mpi-derive", version = "0.1", optional = true }
 mpi-sys = { path = "mpi-sys", version = "0.2" }
 # Public dependency ("derive" feature)
 once_cell = "1.4"
