--- a/mpi-derive/Cargo.toml
+++ b/mpi-derive/Cargo.toml
@@ -2,7 +2,12 @@
 name = "mpi-derive"
 version = "0.1.0"
 authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
+description = "MPI derive support for user types"
+homepage = "https://github.com/rsmpi/rsmpi"
+repository = "https://github.com/rsmpi/rsmpi"
+license = "MIT/Apache-2.0"
 edition = "2018"
+rust-version = "1.54"
 
 [lib]
 proc-macro = true
