--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ once_cell = "1.4"
 smallvec = "1.0.0"
 
 [build-dependencies]
-build-probe-mpi = { path = "build-probe-mpi", version = "0.1" }
+build-probe-mpi = { path = "build-probe-mpi", version = "0.1.1" }
 
 # The following tests depend on specific features
 
@@ -60,3 +60,11 @@ required-features = ["derive"]
 [[example]]
 name = "derive_preinit_panic"
 required-features = ["derive"]
+
+[package.metadata.release]
+tag-name = "{{crate_name}}-{{version}}"
+pre-release-replacements = [
+  { file="README.md", search="version = \"[0-9.]*\"", replace="version = \"{{version}}\"" },
+  { file="src/lib.rs", search="mpi = \"[0-9.]*\"", replace="mpi = \"{{version}}\"" },
+  { file="CHANGELOG.md", search="`main` branch", replace="{{version}} ({{date}})" }
+]
