--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = [
 description = "Message Passing Interface bindings for Rust"
 homepage = "https://github.com/rsmpi/rsmpi"
 repository = "https://github.com/rsmpi/rsmpi"
-documentation = "https://rsmpi.github.io/rsmpi/"
+documentation = "https://docs.rs/mpi"
 readme = "README.md"
 keywords = [ "message-passing", "parallel" ]
 categories = [ "concurrency" ]
