--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ mpi-sys = { path = "mpi-sys", version = "0.2" }
 # Public dependency ("derive" feature)
 once_cell = "1.4"
 smallvec = "1.0.0"
+thiserror = "1.0.37"
 
 [build-dependencies]
 build-probe-mpi = { path = "build-probe-mpi", version = "0.1.2" }
