--- a/build-probe-mpi/Cargo.toml
+++ b/build-probe-mpi/Cargo.toml
@@ -17,6 +17,7 @@ edition = "2021"
 
 [target.'cfg(unix)'.dependencies]
 pkg-config = "0.3.26"
+enquote = "1.1.0"
 
 [package.metadata.release]
 tag-name = "{{crate_name}}-{{version}}"
