--- a/build-probe-mpi/Cargo.toml
+++ b/build-probe-mpi/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = "1.57"
 edition = "2021"
 
 [dependencies]
+shell-words = "1.1.0"
 
 [target.'cfg(unix)'.dependencies]
 pkg-config = "0.3.26"
