--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
             cargo_flags: --all-features
           - os: windows-2022
             rust: stable
-            cargo_flags: --features derive
+            cargo_flags: --features derive,complex
     steps:
       - uses: actions/checkout@v3
       - name: Install (Linux)
