--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,16 @@
 name = "mpi"
 version = "0.6.0"
 authors = [
-    "Benedikt Steinbusch <ben@rockshrub.de>",
-    "Andrew Gaspar <andrew.gaspar@outlook.com>"
+  "Benedikt Steinbusch <ben@rockshrub.de>",
+  "Andrew Gaspar <andrew.gaspar@outlook.com>",
 ]
 description = "Message Passing Interface bindings for Rust"
 homepage = "https://github.com/rsmpi/rsmpi"
 repository = "https://github.com/rsmpi/rsmpi"
 documentation = "https://docs.rs/mpi"
 readme = "README.md"
-keywords = [ "message-passing", "parallel" ]
-categories = [ "concurrency" ]
+keywords = ["message-passing", "parallel"]
+categories = ["concurrency"]
 license = "MIT/Apache-2.0"
 edition = "2021"
 rust-version = "1.65"
@@ -21,17 +21,17 @@ members = ["mpi-derive"]
 
 [features]
 default = ["user-operations"]
-
 user-operations = ["libffi"]
 derive = ["mpi-derive", "memoffset"]
+complex = ["num-complex"]
 
 [dependencies]
 conv = "0.3.3"
 libffi = { version = "3.2.0", optional = true }
-# Public dependency ("derive" feature)
-memoffset = {version = "0.9", optional = true }
+memoffset = { version = "0.9", optional = true }
 mpi-derive = { path = "mpi-derive", version = "0.1", optional = true }
 mpi-sys = { path = "mpi-sys", version = "0.2" }
+num-complex = { version = "0.4.3", optional = true }
 once_cell = "1.18"
 smallvec = "1.11.1"
 thiserror = "1.0.49"
@@ -43,6 +43,11 @@ build-probe-mpi = { path = "build-probe-mpi", version = "0.1.2" }
 memoffset = "0.9" # used by complex_datatype, which does not use "derive" feature
 
 # The following tests depend on specific features
+
+[[example]]
+name = "complex_numbers"
+required-features = ["complex"]
+
 
 [[example]]
 name = "struct"
@@ -67,7 +72,7 @@ required-features = ["derive"]
 [package.metadata.release]
 tag-name = "{{crate_name}}-{{version}}"
 pre-release-replacements = [
-  { file="README.md", search="version = \"[0-9.]*\"", replace="version = \"{{version}}\"" },
-  { file="src/lib.rs", search="mpi = \"[0-9.]*\"", replace="mpi = \"{{version}}\"" },
-  { file="CHANGELOG.md", search="`main` branch", replace="{{version}} ({{date}})" }
+  { file = "README.md", search = "version = \"[0-9.]*\"", replace = "version = \"{{version}}\"" },
+  { file = "src/lib.rs", search = "mpi = \"[0-9.]*\"", replace = "mpi = \"{{version}}\"" },
+  { file = "CHANGELOG.md", search = "`main` branch", replace = "{{version}} ({{date}})" },
 ]
