Prepare for mpi 0.7.0

--- a/build-probe-mpi/Cargo.toml
+++ b/build-probe-mpi/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "build-probe-mpi"
-version = "0.1.2"
+version = "0.1.3"
 authors = [
     "Benedikt Steinbusch <ben@rockshrub.de>",
-    "Andrew Gaspar <andrew.gaspar@outlook.com>"
+    "Andrew Gaspar <andrew.gaspar@outlook.com>",
+    "Jed Brown <jed@jedbrown.org>",
 ]
 description = "Probes the system for an installation of an MPI library"
 homepage = "https://github.com/rsmpi/rsmpi"
