--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "mpi"
-version = "0.6.0"
+version = "0.7.0"
 authors = [
   "Benedikt Steinbusch <ben@rockshrub.de>",
   "Andrew Gaspar <andrew.gaspar@outlook.com>",
+  "Jed Brown <jed@jedbrown.org>",
 ]
 description = "Message Passing Interface bindings for Rust"
 homepage = "https://github.com/rsmpi/rsmpi"
@@ -15,6 +16,10 @@ categories = ["concurrency"]
 license = "MIT/Apache-2.0"
 edition = "2021"
 rust-version = "1.65"
+exclude = [
+  ".github/",
+  "ci/*.sh",
+]
 
 [workspace]
 members = ["mpi-derive"]
@@ -29,15 +34,15 @@ complex = ["num-complex"]
 conv = "0.3.3"
 libffi = { version = "3.2.0", optional = true }
 memoffset = { version = "0.9", optional = true }
-mpi-derive = { path = "mpi-derive", version = "0.1", optional = true }
-mpi-sys = { path = "mpi-sys", version = "0.2" }
+mpi-derive = { path = "mpi-derive", version = "0.1.1", optional = true }
+mpi-sys = { path = "mpi-sys", version = "0.2.1" }
 num-complex = { version = "0.4.3", optional = true }
 once_cell = "1.18"
 smallvec = "1.11.1"
 thiserror = "1.0.49"
 
 [build-dependencies]
-build-probe-mpi = { path = "build-probe-mpi", version = "0.1.2" }
+build-probe-mpi = { path = "build-probe-mpi", version = "0.1.3" }
 
 [dev-dependencies]
 memoffset = "0.9" # used by complex_datatype, which does not use "derive" feature
