MSRV: add Cargo.lock and cargo update in CI
We frequently have CI failures because transitive dependencies have
releases that require new MSRV. The Rust project now suggests committing
Cargo.lock for reproducibility and to enable testing MSRV.

https://blog.rust-lang.org/2023/08/29/committing-lockfiles.html
https://doc.rust-lang.org/cargo/faq.html#why-have-cargolock-in-version-control
https://doc.rust-lang.org/cargo/guide/continuous-integration.html#verifying-latest-dependencies

Perhaps this can be removed if this Pre-RFC is implemented.

https://internals.rust-lang.org/t/pre-rfc-msrv-aware-resolver/19871

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,7 @@ jobs:
             rust: nightly
             mpi_package: libmpich-dev
             cargo_flags: --all-features
+            cargo_update: true
           - os: ubuntu-latest
             rust: stable
             mpi_package: libmpich-dev
@@ -42,7 +43,7 @@ jobs:
             rust: stable
             cargo_flags: --features derive,complex
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install (Linux)
         if: runner.os == 'Linux'
         run: |
@@ -67,6 +68,9 @@ jobs:
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{matrix.rust}}
+      - name: Cargo update
+        if: ${{ matrix.cargo_update }}
+        run: cargo update --verbose
       - name: Cargo Test ${{ matrix.cargo_flags }}
         run: cargo test ${{ matrix.cargo_flags }}
       - name: Parallel Examples
